# ftdi_bitbang

./: CMakeLists.txt  README.md  bitbang.c
examples/: CMakeLists.txt
examples/c_example/: CMakeLists.txt  main.c
examples/cpp_example/: CMakeLists.txt  main.cpp
include/: bitbang.h
